single constants file for scss

--- a/src/constants/scss/constants.scss
+++ b/src/constants/scss/constants.scss
@@ -4,3 +4,8 @@ $sideNavWidth: 240px;
 
 $primaryHorizontalSpacing: 2rem;
 $primaryVerticalSpacing: 1rem;
+
+$responsiveSm: 568px;
+$responsiveMed: 912px;
+$responsiveXL: 1024px;
+$responsiveLg: 1356px;
