--- a/src/components/UI/Card/style.scss
+++ b/src/components/UI/Card/style.scss
@@ -1,4 +1,4 @@
-@import '../../../constants/scss/constants.scss';
+@import '../../../constants/variables.scss';
 
 .small-card-container {
   flex: 1;
