add overflow for main content and api keys expand

--- a/src/components/App/scss/style.scss
+++ b/src/components/App/scss/style.scss
@@ -1,8 +1,10 @@
-@import '../../../constants/scss/constants.scss';
+@import '../../../constants/variables.scss';
 
 .main-container {
   position: fixed;
   top: 0;
   left: $sideNavWidth;
   width: calc(100% - #{$sideNavWidth});
+  height: 100vh;
+  overflow: hidden;
 }
