--- a/src/components/Navigation/scss/style.scss
+++ b/src/components/Navigation/scss/style.scss
@@ -1,4 +1,4 @@
-@import '../../../constants/scss/constants.scss';
+@import '../../../constants/variables.scss';
 
 .side-bar-container {
   position: fixed;
